--- a/src/views/homePageView.ejs
+++ b/src/views/homePageView.ejs
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Homepage</h1>
-    <!-- <ul>
+    <a href="/log-in">Log in</a>
+    <a href="/sign-up">Sign up</a>
+   <ul>
 
         <% for(let i = 0; i < locals.messages.length; i++){%>
         <li>
@@ -20,6 +22,6 @@
           <%}%>
         </ul>
         <%}%>
-      </ul> -->
+      </ul> 
   </body>
 </html>
