Create login page view

--- a/src/views/loginPageView.ejs
+++ b/src/views/loginPageView.ejs
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in</title>
   </head>
-  <body></body>
+  <body>
+    <form action="/login/submit">
+      <label for="username">Username: </label>
+      <input type="text" name="username" id="username" />
+
+      <label for="password">Password: </label>
+      <input type="password" name="password" id="password" />
+
+      <button type="submit">Log in</button>
+    </form>
+    <a href="/">Home</a>
+  </body>
 </html>
