--- a/src/views/loginPageView.ejs
+++ b/src/views/loginPageView.ejs
@@ -16,5 +16,6 @@
       <button type="submit">Log in</button>
     </form>
     <a href="/">Home</a>
+    <a href="/sign-up">Sign up</a>
   </body>
 </html>
