Configure passport local strategy

--- a/src/views/loginPageView.ejs
+++ b/src/views/loginPageView.ejs
@@ -7,15 +7,21 @@
   </head>
   <body>
     <form action="/login/submit">
-      <label for="username">Username: </label>
-      <input type="text" name="username" id="username" />
+      <p>
+        <label for="username">Username: </label>
+        <input type="text" name="username" id="username" />
+      </p>
 
-      <label for="password">Password: </label>
-      <input type="password" name="password" id="password" />
+      <p>
+        <label for="password">Password: </label>
+        <input type="password" name="password" id="password" />
+      </p>
 
-      <button type="submit">Log in</button>
+      <p>
+        <button type="submit">Log in</button>
+      </p>
     </form>
     <a href="/">Home</a>
-    <a href="/sign-up">Sign up</a>
+    <a href="/signup">Sign up</a>
   </body>
 </html>
