--- a/src/views/signupPageView.ejs
+++ b/src/views/signupPageView.ejs
@@ -29,7 +29,7 @@
 
       <p><button type="submit">Sign up</button></p>
     </form>
-    <a href="/log-in">Log in</a>
+    <a href="/login">Log in</a>
     <a href="/">Home</a>
   </body>
 </html>
