--- a/src/views/homePageView.ejs
+++ b/src/views/homePageView.ejs
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Homepage</h1>
-    <a href="/log-in">Log in</a>
-    <a href="/sign-up">Sign up</a>
+    <a href="/login">Log in</a>
+    <a href="/signup">Sign up</a>
    <ul>
 
         <% for(let i = 0; i < locals.messages.length; i++){%>
