Create endpoint that inserts user into db with hashed password

--- a/src/views/loginPageView.ejs
+++ b/src/views/loginPageView.ejs
@@ -6,7 +6,7 @@
     <title>Log in</title>
   </head>
   <body>
-    <form action="/login/submit">
+    <form action="/login/submit" method="post">
       <p>
         <label for="username">Username: </label>
         <input type="text" name="username" id="username" />
