--- a/src/views/signupPageView.ejs
+++ b/src/views/signupPageView.ejs
@@ -6,7 +6,7 @@
     <title>Sign up</title>
   </head>
   <body>
-    <form action="/sign-up/submit">
+    <form action="signup/submit" method="post">
       <p>
         <label for="username">Username</label>
         <input type="text" id="username" name="username" />
