--- a/src/views/homePageView.ejs
+++ b/src/views/homePageView.ejs
@@ -9,6 +9,9 @@
     <h1>Homepage</h1>
     <a href="/login">Log in</a>
     <a href="/signup">Sign up</a>
+    <%if(locals.user){%>
+      <p><%=locals.user%> is logged in</p>
+      <%}%>
    <ul>
 
         <% for(let i = 0; i < locals.messages.length; i++){%>
